--- a/d3graph.qmd
+++ b/d3graph.qmd
@@ -61,7 +61,9 @@
 </button>
 
 <!-- Create a div where the graph will take place -->
-<div id="my_dataviz"></div>
+
+::: {#my_dataviz}
+:::
 
 <h1>COVID-19 death counts of top 5 conditions by quarter in 2020-2021</h1>
 
